添加延时队列

--- a/MqDemo/EasyNetQ/Server/appsettings.json
+++ b/MqDemo/EasyNetQ/Server/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "EasyNetQ": {
-    "Dev": "host=127.0.0.1"
+    "Dev": "host=39.105.136.203;port=5672;virtualHost=/;username=admin;password=ad456ad;timeout=60"
   }
 }
