--- a/MqDemo/EasyNetQ/Client1/Client1.csproj
+++ b/MqDemo/EasyNetQ/Client1/Client1.csproj
@@ -27,4 +27,6 @@
     <ProjectReference Include="..\Message\Messages\Messages.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
